--- a/Enigma/Enigma/Host/HostViewController.xib
+++ b/Enigma/Enigma/Host/HostViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HostViewController" customModule="Enigma" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="W6D-c7-N6o" id="t3a-I7-xG7"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,8 +18,28 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="W6D-c7-N6o">
+                    <rect key="frame" x="0.0" y="44" width="414" height="300"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="300" id="TaA-of-sb8"/>
+                    </constraints>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Nz5-u3-Shv">
+                        <size key="itemSize" width="128" height="128"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="W6D-c7-N6o" secondAttribute="trailing" id="26e-3z-hCu"/>
+                <constraint firstItem="W6D-c7-N6o" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="6H9-P9-Bmf"/>
+                <constraint firstItem="W6D-c7-N6o" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Lej-Ma-PUQ"/>
+            </constraints>
             <point key="canvasLocation" x="139" y="80"/>
         </view>
     </objects>
