--- a/Enigma/Enigma/Save/SaveViewController.xib
+++ b/Enigma/Enigma/Save/SaveViewController.xib
@@ -10,6 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SaveViewController" customModule="Enigma" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="hgt-MR-Ez4" id="694-Pe-hdw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,8 +18,20 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="hgt-MR-Ez4">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                </tableView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="hgt-MR-Ez4" secondAttribute="bottom" id="6N0-Yy-ZRT"/>
+                <constraint firstItem="hgt-MR-Ez4" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Iza-Is-sp1"/>
+                <constraint firstItem="hgt-MR-Ez4" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="mf9-ci-TFi"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="hgt-MR-Ez4" secondAttribute="trailing" id="nJr-Ts-Vdf"/>
+            </constraints>
             <point key="canvasLocation" x="139" y="100"/>
         </view>
     </objects>
