--- a/Enigma/Enigma/Main/Base.lproj/Main.storyboard
+++ b/Enigma/Enigma/Main/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,55 +23,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WmF-3K-1us" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-33" y="742"/>
-        </scene>
-        <!--Host-->
-        <scene sceneID="JWt-XU-3a3">
-            <objects>
-                <viewController id="XNm-hg-KtB" customClass="HostContainerViewController" customModule="Enigma" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="bL2-5A-pck">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="11c-AO-CvJ">
-                                <rect key="frame" x="0.0" y="88" width="414" height="82"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="82" id="9Ge-cW-x5J"/>
-                                </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="eAL-dx-ig1">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="cL0-4Y-fGt">
-                                        <rect key="frame" x="0.0" y="-23" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="kUx-UU-aex">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="Oh0-hi-09t"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="Oh0-hi-09t" firstAttribute="trailing" secondItem="11c-AO-CvJ" secondAttribute="trailing" id="8n4-Ue-x0s"/>
-                            <constraint firstItem="11c-AO-CvJ" firstAttribute="top" secondItem="Oh0-hi-09t" secondAttribute="top" id="lq0-os-2AG"/>
-                            <constraint firstItem="11c-AO-CvJ" firstAttribute="leading" secondItem="Oh0-hi-09t" secondAttribute="leading" id="oaN-XA-8Wh"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" title="Host" id="0cg-Af-RQX"/>
-                    <connections>
-                        <outlet property="collectionView" destination="11c-AO-CvJ" id="BMZ-5I-bcU"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6gX-EZ-AT7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1810.144927536232" y="51.5625"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="9cr-t0-1dk">
@@ -104,6 +54,16 @@
             </objects>
             <point key="canvasLocation" x="648" y="-372"/>
         </scene>
+        <!--Home-->
+        <scene sceneID="mXw-4i-iKD">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Home" id="owD-mX-RZM" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="bKC-eA-vm4"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gMc-3J-nbd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1409" y="52"/>
+        </scene>
         <!--Hot-->
         <scene sceneID="Wtp-ES-ywp">
             <objects>
@@ -116,7 +76,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="XNm-hg-KtB" kind="relationship" relationship="rootViewController" id="3Pn-Ir-siZ"/>
+                        <segue destination="owD-mX-RZM" kind="relationship" relationship="rootViewController" id="Uap-g0-UH7"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OfV-Fe-yxO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
