--- a/Enigma/Enigma/Main/Base.lproj/Main.storyboard
+++ b/Enigma/Enigma/Main/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7w7-6i-IV4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7w7-6i-IV4">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -38,6 +38,7 @@
                         <segue destination="PZJ-v5-yNn" kind="relationship" relationship="viewControllers" id="Uti-3G-xtt"/>
                         <segue destination="Et6-YC-VeD" kind="relationship" relationship="viewControllers" id="O4Q-Tv-cBh"/>
                         <segue destination="GRe-N9-tgy" kind="relationship" relationship="viewControllers" id="gUw-PT-FOG"/>
+                        <segue destination="Dau-IU-Bu2" kind="relationship" relationship="viewControllers" id="CIX-90-Pjo"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZZM-Wi-DS1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -62,7 +63,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gMc-3J-nbd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1409" y="52"/>
+            <point key="canvasLocation" x="1406" y="25"/>
         </scene>
         <!--Hot-->
         <scene sceneID="Wtp-ES-ywp">
@@ -81,7 +82,36 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OfV-Fe-yxO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="900.00000000000011" y="51.5625"/>
+            <point key="canvasLocation" x="900" y="25"/>
+        </scene>
+        <!--Background-->
+        <scene sceneID="vYk-Ww-7ZO">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Background" id="pBk-jQ-0Xt" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="vao-DT-tuF"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mxW-Rj-YaW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1433" y="-696"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="ApE-uL-ML6">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Dau-IU-Bu2" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="KrK-zx-gRk"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gLi-UT-GCL">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="pBk-jQ-0Xt" kind="relationship" relationship="rootViewController" id="sgu-vu-aiH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y5P-6R-TLr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="758" y="-696"/>
         </scene>
     </scenes>
     <resources>
